# genDocsGPT

./: .gitignore  LICENSE  README.md  __main__.py  build_prompt.py  check_params.py  genDocsGPT.py  gen_docs.py  read_files.py  requirements.txt  setup.cfg
.github/workflows/: test.yml
examples/: api.md  lightweight-go-server-doc-final.md  lightweight-go-server-doc.md  lightweight-go-server-swagger-with-json-and-table.md  lightweight-go-server-swagger-with-json-model-and-table.md  lightweight-go-server-swagger-with-json.md  lightweight-go-server-swagger.md  test.md
genDocsGPT/: __init__.py  __main__.py
usage/GitHub Action/: genDocsGPT.yml
usage/Standalone/: genDocsGPT.sh
utils/: build_prompt.py  check_params.py  gen_docs.py  get_token.py  help.py  read_files.py  write_doc.py
utils/tests/: build_prompt_test.py  check_params_test.py  get_token_test.py  read_files_test.py  write_doc_test.py
