[metadata]
name = genDocsGPT
version = 1.0b17
author = Marco Rosner
author_email = marco.rosner@gmail.com
description = Generate API documentation in MarkDown based on the models and api handlers for given project using ChatGPT.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
url = https://github.com/marco-rosner/genDocsGPT
keywords = generator, documentation, GPT, ChatGPT, genDocsGPT, OpenAI
project_urls =
    Bug Tracker = https://github.com/marco-rosner/genDocsGPT/issues
    repository = https://github.com/marco-rosner/genDocsGPT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Documentation
    Topic :: Software Development :: Documentation
    Topic :: Utilities

[options]
package_dir =
    = .
packages = find:
install_requires = file: requirements.txt
python_requires = >=3.7

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    genDocsGPT = genDocsGPT:main